# InariApp

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: PVT_rcls.cpp  PVT_rcls.h  check_Gal_state.cpp  check_Gal_state.h  check_time.cpp  check_time.h  check_towDecoded_state.cpp  check_towDecoded_state.h  check_towKnown_state.cpp  check_towKnown_state.h  e_r_corr.cpp  e_r_corr.h  extract_info.cpp  extract_info.h  find_eph.cpp  find_eph.h  getCtrl_corr.cpp  getCtrl_corr.h  getEphMatrix.cpp  getEphMatrix.h  getProp_corr.cpp  getProp_corr.h  iono_error_correction.cpp  iono_error_correction.h  lla2ecef.cpp  lla2ecef.h  main_GNSS.cpp  main_GNSS.h  nsgpst2gpst.cpp  nsgpst2gpst.h  pseudo_gen.cpp  pseudo_gen.h  pvtEngine-lib.cpp  pvtEngine-lib.h  rad2deg.cpp  rad2deg.h  sat_clock_error_correction.cpp  sat_clock_error_correction.h  sat_pos.cpp  sat_pos.h  (+10 more)
app/src/main/res/drawable-mdpi/: bg_corners_accent.xml
app/src/main/res/drawable-v24/: signal_gradient.xml
app/src/main/res/drawable-xhdpi/: launch_screen.xml
app/src/main/res/layout/: activity_gnss_settings.xml  activity_logs.xml  activity_logs_detail.xml  activity_main.xml  activity_map_log.xml  activity_modes.xml  activity_splash.xml  activity_statistics.xml  activity_tutorial.xml  dialog_change_graph.xml  dialog_map_terrain.xml  dialog_modes_info.xml  dialog_new_mode.xml  dialog_save_log.xml  fragment_about.xml  fragment_logs.xml  (+23 more)
app/src/test/resources/: badia.txt  lastJSON1218.txt
(+264 files in other folders)
